# VELDT-blinker-clash

./: .gitignore  Blinker.hs  Blinker.pcf  CHANGELOG.md  IceRgbDriver.hs  Makefile  README.md  Rgb.hs  VELDT-blinker-clash.cabal  blinker.cabal  blinker.nix  cabal.project  default.nix
.github/workflows/: haskell.yml
prim/: SB_RGB_DRV.json
shake/: Shake.hs
src/: Blinker.hs  Rgb.hs
