cabal-version:       >=1.10

name:                VELDT-blinker-clash
version:             0.1.0.0
synopsis:	     VELDT Led Blinker
license-file:        LICENSE
author:              dopamane
maintainer:          standard.semiconductor@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
        exposed-modules: Blinker
        other-modules: IceRgbDriver
        build-depends: clash-prelude
                     , clash-ghc
                     , mtl
                     , base
        default-extensions: NoImplicitPrelude
        default-language: Haskell2010
        ghc-options: -Wall -fexpose-all-unfoldings -fno-worker-wrapper
	