cabal-version:       >=1.10

name:                blinker
version:             0.1.0.0
synopsis:	     VELDT Led Blinker
license-file:        LICENSE
author:              dopamane
maintainer:          standard.semiconductor@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

data-files: prim/SB_RGB_DRV.json
                     
library
        exposed-modules: Blinker
                       , IceRgbDriver
        other-modules: Paths_blinker
        build-depends: clash-prelude
                     , mtl
                     , base
                     , filepath
        default-extensions: NoImplicitPrelude
        default-language: Haskell2010
        ghc-options: -Wall -fexpose-all-unfoldings -fno-worker-wrapper
        cpp-options: -DCABAL