cabal-version:       2.4
name:                blinker
version:             0.1.0.0
synopsis:            VELDT Led Blinker
license-file:        LICENSE
author:              dopamane
maintainer:          standard.semiconductor@gmail.com
extra-source-files:  README.md
                         
library
        hs-source-dirs: src
        exposed-modules: Blinker
        default-language: Haskell2010
        build-depends:
          base          >= 4.12 && < 4.17,
          Cabal,
          clash-prelude >= 1.4  && < 1.7,
          ice40-prim    >= 0.3  && < 0.4,
          mtl,
          ghc-typelits-natnormalise,
          ghc-typelits-extra,
          ghc-typelits-knownnat
        ghc-options:
          -Wall -Wcompat

          -- Plugins to support type-level constraint solving on naturals
          -fplugin GHC.TypeLits.Extra.Solver
          -fplugin GHC.TypeLits.Normalise
          -fplugin GHC.TypeLits.KnownNat.Solver

          -- Clash needs access to the source code in compiled modules
          -fexpose-all-unfoldings

          -- Worker wrappers introduce unstable names for functions that might have
          -- blackboxes attached for them. You can disable this, but be sure to add
          -- a no-specialize pragma to every function with a blackbox.
          -fno-worker-wrapper
        default-extensions:
          BangPatterns
          BinaryLiterals
          ConstraintKinds
          DataKinds
          DefaultSignatures
          DeriveAnyClass
          DeriveDataTypeable
          DeriveFoldable
          DeriveFunctor
          DeriveGeneric
          DeriveLift
          DeriveTraversable
          DerivingStrategies
          InstanceSigs
          KindSignatures
          LambdaCase
          NoStarIsType
          PolyKinds
          RankNTypes
          ScopedTypeVariables
          StandaloneDeriving
          TupleSections
          TypeApplications
          TypeFamilies
          TypeOperators
          ViewPatterns

          -- TemplateHaskell is used to support convenience functions such as
          -- 'listToVecTH' and 'bLit'.
          TemplateHaskell
          QuasiQuotes

          -- Prelude isn't imported by default as Clash offers Clash.Prelude
          NoImplicitPrelude

executable blinker
  main-is:          Shake.hs
  build-depends:    base, 
                    shake, 
                    clash-ghc, 
  hs-source-dirs:   shake
  default-language: Haskell2010
  if !os(Windows)
     ghc-options: -dynamic

-- Builds the executable 'clashi'
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
    build-depends: base, clash-ghc
